Release 1.2.6

2004-02-04  Jody Goldberg <jody@gnome.org>

	* Release 1.2.6

2004-02-04  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (excel_read_CODENAME) : new routine to store the
	  codename for later use while round tripping.
	(excel_read_sheet) : use it here.
	(excel_read_workbook) : use it here.

	* ms-excel-write.c (excel_write_CODENAME) : new routine to use the
	  stored codename rather than generating one on the fly.
	(excel_write_sheet) : use it here.
	(excel_write_workbook) : and here.

2004-01-20  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=132017
	* applix-read.c (applix_parse_style) : Support double underline

2004-02-04  Jody Goldberg <jody@gnome.org>

	* graph/gog-legend.c (gog_legend_editor) : new to avoid warning.

	* graph/plugins/plot_pie/gog-pie.c (gog_pie_plot_foreach_elem) :
	  handle insufficient labels more smoothly.

2004-01-29  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=132390
	* graph/gog-style.c (cb_fg_color_changed) : set_style frees the new
	  style do not attempt to use it.
	(cb_bg_color_changed) : ditto.
	(cb_fill_gradient_start_color) : ditto.
	(cb_fill_gradient_end_color) : ditto.
	(cb_marker_outline_color_changed) : ditto.
	(cb_marker_fill_color_changed) : ditto.

2004-01-23  Jody Goldberg <jody@gnome.org>

	* widget-color-combo.c (color_combo_set_color_internal) : redraw the
	  preview when it changes.